<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rlcontroller</name>
  <version>0.0.0</version>
  <description>RL-based contoller for ambot series robots</description>
  <maintainer email="suntao.hn@gmail.com">ubuntu</maintainer>
  <license>Apache License 2.0</license>


  <depend>ambot_msgs</depend>
   <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>torch</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
